--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,36 @@
 {
     "name": "Vibinex",
-    "version": "0.0.1",
-    "manifest_version": 2,
-    "description":"for making changes in github website",
+    "version": "0.0.2",
+    "manifest_version": 3,
+    "description": "Add context and prioritization to your pull request reviewing",
     "background": {
-        "scripts":["backgroundScript.js"]
-      },
-    "browser_action": {
-        "default_popup": "popup.html",
-        "default_icon": "vibinex-logo.png"
+        "service_workers": [
+            "backgroundScript.js"
+        ]
+    },
+    "action": {
+        "default_popup": "popup/popup.html",
+        "default_icon": "resources/vibinex-logo.png"
     },
     "permissions": [
         "tabs"
     ],
     "icons": {
-        "128": "vibinex-logo.png"
+        "128": "resources/vibinex-logo.png"
     },
-    "content_scripts":[{
-        "matches":["https://github.com/**", "https://github.com/*pull*","https://github.com/*pulls*"],
-        "css":["main.css"],
-        "js":["contentScript.js"]
-    }]
+    "content_scripts": [
+        {
+            "matches": [
+                "https://github.com/**",
+                "https://vibinex.com/**",
+                "https://bitbucket.org/**"
+            ],
+            "css": [
+                "scripts/main.css"
+            ],
+            "js": [
+                "scripts/contentScript.js"
+            ]
+        }
+    ]
 }
