--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,4 +1,4 @@
-name: Create a release to publish
+name: Publish to Chrome Web Store.
 
 on:
   workflow_dispatch:
@@ -34,5 +34,3 @@ jobs:
       with:
       	name: 'Chrome Artifacts'
       	path: ./Package.zip
-    
-    
