Split contentScript into multiple scripts and add comments through ai

--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,7 @@
                 "scripts/main.css"
             ],
             "js": [
-                "scripts/contentScript.js"
+                "scripts/utilities.js", "scripts/api.js", "scripts/highlighting.js", "scripts/repoHandlers.js", "scripts/orchestrator.js", "scripts/init.js"
             ]
         }
     ]
