Add Logged out indicator after checking for missing user session

--- a/manifest.json
+++ b/manifest.json
@@ -39,7 +39,8 @@
                 "scripts/highlighting.js",
                 "scripts/repoHandlers.js",
                 "scripts/orchestrator.js",
-                "scripts/init.js"
+                "scripts/init.js",
+                "scripts/signedOutIndicator.js"
             ]
         }
     ]
