trigger button: 1. Modularized by creating a separate `triggerButton.js` file for the addTriggerButton function 2. Added support for Bitbucket pull-requests page

--- a/manifest.json
+++ b/manifest.json
@@ -38,6 +38,7 @@
                 "scripts/api.js",
                 "scripts/highlighting.js",
                 "scripts/repoHandlers.js",
+                "scripts/triggerButton.js",
                 "scripts/signedOutIndicator.js",
                 "scripts/orchestrator.js",
                 "scripts/init.js"
